--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
 __pycache__
-.env
 .history
 .hypothesis/
+.vscode/
 build/
 reports/
+
+client/node_modules
+node_modules
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+coverage
+coverage.json
+package-lock.json
+client/package-lock.json
+typechain
+
+#Hardhat files
+cache
+artifacts
+
+# Local Netlify folder
+.netlify
